--- a/00-html-css/styles.css
+++ b/00-html-css/styles.css
@@ -203,26 +203,39 @@ form input[type="text"]::placeholder {
   color: #64748b;
 }
 
-form button[type="submit"] {
+button {
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
   background-color: var(--primary);
   color: white;
-  font-weight: 700;
+  font-weight: 400;
   border: none;
   cursor: pointer;
-  transition: background-color 0.2s;
+  transition: all 0.2s;
   font-family: inherit;
   font-size: 1rem;
   white-space: nowrap;
+
+   &:hover,
+   &:focus {
+   background-color: var(--primary-hover);
+   outline: 2px solid white;
+   outline-offset: 2px;
+   }
+
+   &:active {
+    transform: scale(0.90);
+   }
+
+   &:disabled {
+    opacity: .5;
+    pointer-events: none;
+   }
+
 }
 
-form button[type="submit"]:hover,
-form button[type="submit"]:focus {
-  background-color: var(--primary-hover);
-  outline: 2px solid white;
-  outline-offset: 2px;
-}
+
+
 
 /* Features Section */
 main > section:nth-child(2) {
@@ -333,3 +346,118 @@ article {
     font-weight: 500;
   }
 }
+
+
+/*Estilos página Empleos*/
+
+.profile-section {
+  display: flex;
+  align-items: center;
+  gap: 1 rem;
+  margin-left: auto;
+
+}
+
+.jobs-search {
+    margin: 0;
+    padding: 0;
+    height: auto  !important;  
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: .25rem;
+    }
+
+    p {
+      font-size: 1.125rem;
+      color: var(--text-muted);
+      margin-bottom: 1.5rem;
+    }
+    
+    .search-bar {
+      background: var(--input-bg);
+      padding: .25rem .5rem;
+    }
+
+    .search-filters {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: .5rem;
+    }
+
+    form {
+      width: 100%;
+      max-width: 1280px;
+    }
+
+    form div {
+      background: none;
+      box-shadow: none;
+      padding: 0;
+    }
+  }
+    .jobs-listings {
+      border: 1px solid rgba(255, 255, 255, .3);
+      border-radius: 1rem;
+
+      article {
+        background: none;
+        box-shadow: none;
+        border-radius: 0;
+        border-bottom: 1px, solid rgba(255, 255, 255, .3);
+        margin: 0;
+
+        display: flex;
+        align-items: start;
+        gap: 1rem;
+
+        &:last-child {
+          border-bottom: none;
+        }
+      }
+    }
+
+    .pagination {
+      display: flex;
+      justify-content: center;
+      gap: 0.5 rem;
+      margin-block: 2rem;
+
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 2.rem;
+        height: 2.5rem;
+        text-decoration: none;
+        color: var(--text-muted);
+        border-radius: 0.375rem;
+        transition: all .3s;
+
+        &:hover, &:focus {
+          background-color: #fff;
+        }
+
+        &:active {
+          transform: scale(0.90);
+        }
+
+        &.is-active {
+          background-color: var(--primary-light);
+          color: white;
+          pointer-events: none;
+        }
+
+      }
+
+    }
+
+    .button-apply-job {
+      background: #09f;
+
+      &.is-applied {
+        background: #4caf50;
+        pointer-events: none;
+      }
+
+    }
