--- a/00-html-css/styles.css
+++ b/00-html-css/styles.css
@@ -353,8 +353,20 @@ article {
 .profile-section {
   display: flex;
   align-items: center;
-  gap: 1 rem;
+  gap: 1rem;
   margin-left: auto;
+  a {
+     color: var(--primary-light);
+     transition: color 0.2s;
+     font-weight: 500;
+    
+    
+    &:hover, &:focus {
+      color: var(--primary-hover);
+      outline: none;
+    }
+  }
+
 
 }
 
@@ -396,15 +408,26 @@ article {
       padding: 0;
     }
   }
+
+  .resultados-busqueda {
+    padding-top: 15px;
+    padding-left: 190px;
+    padding-bottom: 15px;
+    
+}
+
+
+
     .jobs-listings {
       border: 1px solid rgba(255, 255, 255, .3);
       border-radius: 1rem;
+      
 
       article {
         background: none;
         box-shadow: none;
         border-radius: 0;
-        border-bottom: 1px, solid rgba(255, 255, 255, .3);
+        border-bottom: 1px solid rgba(255, 255, 255, .3);
         margin: 0;
 
         display: flex;
@@ -420,14 +443,14 @@ article {
     .pagination {
       display: flex;
       justify-content: center;
-      gap: 0.5 rem;
+      gap: 0.5rem;
       margin-block: 2rem;
 
       a {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 2.rem;
+        width: 2.5rem;
         height: 2.5rem;
         text-decoration: none;
         color: var(--text-muted);
