--- a/00-html-css/styles.css
+++ b/00-html-css/styles.css
@@ -1,16 +1,13 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
-
 :root {
-    --primary:  #3b4550;
-    --primary-dark: #0a3d66;
-     --primary-hover: #0d5ba8;
+  --primary: #3b4550;
+  --primary-dark: #0a3d66;
+  --primary-hover: #0d5ba8;
   --primary-light: #09f;
   --background: #06182a;
   --text-primary: #ffffff;
@@ -23,76 +20,47 @@
   --hsla-example: hsla(210, 100%, 56%, 1);
 }
 
-
-
-
-
-
-
-
-
-
-
-
 @font-face {
-  font-family: 'Inter Variable';
+  font-family: "Inter Variable";
   font-style: normal;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2)
+    format("woff2-variations");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
-
-
-
-
-
-
-
-
 
 body {
-    font-family: system-ui;
-    background-color: var(--background) ;
-    color: var(--text-primary);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    line-height: 1.6;
+  font-family: system-ui;
+  background-color: var(--background);
+  color: var(--text-primary);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.6;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*Títulos principales*/
 h1 {
-    font-size: 2.25rem;
-    font-weight: 900;
-    margin-bottom: 1rem;
-    line-height: 1.2;
-    text-wrap: balance;
+  font-size: 2.25rem;
+  font-weight: 900;
+  margin-bottom: 1rem;
+  line-height: 1.2;
+  text-wrap: balance;
 }
 
 h1 + p {
   text-wrap: balance;
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 /* Header */
 header {
   border-bottom: 1px solid var(--border);
   background: var(--background);
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -117,7 +85,8 @@ nav {
     transition: color 0.2s;
     font-weight: 500;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: var(--primary);
       outline: none;
     }
@@ -158,7 +127,11 @@ main > section:nth-child(1) {
     z-index: -1;
     left: 0;
     right: 0;
-    mask-image: linear-gradient(to bottom, rgba(16, 25, 34, 1) 5%, rgba(16, 25, 34, 0) 80%);
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(16, 25, 34, 1) 5%,
+      rgba(16, 25, 34, 0) 80%
+    );
   }
 }
 
@@ -216,26 +189,22 @@ button {
   font-size: 1rem;
   white-space: nowrap;
 
-   &:hover,
-   &:focus {
-   background-color: var(--primary-hover);
-   outline: 2px solid white;
-   outline-offset: 2px;
-   }
+  &:hover,
+  &:focus {
+    background-color: var(--primary-hover);
+    outline: 2px solid white;
+    outline-offset: 2px;
+  }
 
-   &:active {
-    transform: scale(0.90);
-   }
+  &:active {
+    transform: scale(0.9);
+  }
 
-   &:disabled {
-    opacity: .5;
+  &:disabled {
+    opacity: 0.5;
     pointer-events: none;
-   }
-
+  }
 }
-
-
-
 
 /* Features Section */
 main > section:nth-child(2) {
@@ -252,7 +221,7 @@ main > section:nth-child(2) {
     }
 
     p {
-      opacity: .75;
+      opacity: 0.75;
     }
   }
 
@@ -280,7 +249,7 @@ main > section:nth-child(2) > div > div:first-child > p {
 main > section:nth-child(2) footer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 16px
+  gap: 16px;
 }
 
 /* Feature Cards */
@@ -331,7 +300,7 @@ article {
 
   svg {
     color: var(--primary-light);
-    background: rgba(0, 153, 255, .3);
+    background: rgba(0, 153, 255, 0.3);
     width: 64px;
     height: 64px;
     border-radius: 100%;
@@ -347,7 +316,6 @@ article {
   }
 }
 
-
 /*Estilos página Empleos*/
 
 .profile-section {
@@ -356,131 +324,160 @@ article {
   gap: 1rem;
   margin-left: auto;
   a {
-     color: var(--primary-light);
-     transition: color 0.2s;
-     font-weight: 500;
-    
-    
-    &:hover, &:focus {
+    color: var(--primary-light);
+    transition: color 0.2s;
+    font-weight: 500;
+
+    &:hover,
+    &:focus {
       color: var(--primary-hover);
       outline: none;
     }
   }
-
-
 }
 
 .jobs-search {
-    margin: 0;
-    padding: 0;
-    height: auto  !important;  
+  margin: 0;
+  padding: 0;
+  height: auto !important;
 
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: .25rem;
-    }
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.25rem;
+  }
 
-    p {
-      font-size: 1.125rem;
-      color: var(--text-muted);
-      margin-bottom: 1.5rem;
-    }
-    
-    .search-bar {
-      background: var(--input-bg);
-      padding: .25rem .5rem;
-    }
+  p {
+    font-size: 1.125rem;
+    color: var(--text-muted);
+    margin-bottom: 1.5rem;
+  }
 
-    .search-filters {
-      display: flex;
-      flex-wrap: wrap;
-      margin-top: .5rem;
-    }
+  .search-bar {
+    background: var(--input-bg);
+    padding: 0.25rem 0.5rem;
+  }
 
-    form {
-      width: 100%;
-      max-width: 1280px;
-    }
+  .search-filters {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0.9rem;
 
-    form div {
-      background: none;
-      box-shadow: none;
-      padding: 0;
+    select {
+      background: #334155;
+      color: var(--text-secondary);
+      border: none;
+      border-radius: 0.5rem;
+      padding: 0.5rem;
+      margin-right: 0.5rem;
+
+      option {
+        transition: all 0.2s;
+      }
+      &:hover,
+      &:focus {
+        background-color: var(--primary);
+        outline: 2px solid white;
+        outline-offset: 2px;
+      }
     }
   }
 
-  .resultados-busqueda {
-    padding-top: 15px;
-    padding-left: 190px;
-    padding-bottom: 15px;
-    
+  form {
+    width: 100%;
+    max-width: 1280px;
+  }
+
+  form div {
+    background: none;
+    box-shadow: none;
+    padding: 0;
+  }
 }
 
+.resultados-busqueda {
+  padding-top: 15px;
+  padding-left: 190px;
+  padding-bottom: 15px;
+}
 
+.jobs-listings {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 1rem;
 
-    .jobs-listings {
-      border: 1px solid rgba(255, 255, 255, .3);
-      border-radius: 1rem;
-      
+  article {
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    margin: 0;
 
-      article {
-        background: none;
-        box-shadow: none;
-        border-radius: 0;
-        border-bottom: 1px solid rgba(255, 255, 255, .3);
-        margin: 0;
+    display: flex;
+    align-items: start;
+    gap: 1rem;
 
-        display: flex;
-        align-items: start;
-        gap: 1rem;
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+}
 
-        &:last-child {
-          border-bottom: none;
-        }
-      }
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-block: 2rem;
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    text-decoration: none;
+    color: var(--text-muted);
+    border-radius: 0.375rem;
+    transition: all 0.3s;
+
+    &:hover,
+    &:focus {
+      background-color: #fff;
     }
 
-    .pagination {
-      display: flex;
-      justify-content: center;
-      gap: 0.5rem;
-      margin-block: 2rem;
-
-      a {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 2.5rem;
-        height: 2.5rem;
-        text-decoration: none;
-        color: var(--text-muted);
-        border-radius: 0.375rem;
-        transition: all .3s;
-
-        &:hover, &:focus {
-          background-color: #fff;
-        }
-
-        &:active {
-          transform: scale(0.90);
-        }
-
-        &.is-active {
-          background-color: var(--primary-light);
-          color: white;
-          pointer-events: none;
-        }
-
-      }
-
+    &:active {
+      transform: scale(0.9);
     }
 
-    .button-apply-job {
-      background: #09f;
-
-      &.is-applied {
-        background: #4caf50;
-        pointer-events: none;
-      }
-
+    &.is-active {
+      background-color: var(--primary-light);
+      color: white;
+      pointer-events: none;
     }
+  }
+}
+
+.button-apply-job {
+  background: #09f;
+
+  &.is-applied {
+    background: #4caf50;
+    pointer-events: none;
+  }
+}
+
+/*Detalle Ing Software*/
+
+ul {
+  list-style: none;
+  margin: 0;
+}
+
+.list {
+  svg {
+    background: none;
+  }
+
+  li {
+    display: flex;
+    align-items: center;
+  }
+}
